# DinnEngine

./: .gitignore  .gitmodules  CMakeLists.txt  DinnEngine.sln  README.md  generate-projects.bat  premake5.lua
DinnEngine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DinnEngine.vcxproj  Test.cpp  Test.h  stb.cpp
DinnEngine/dependencies/glad/include/glad/: glad.h
DinnEngine/dependencies/glad/src/: glad.c
DinnEngine/src/: Dinn.h  dnpch.h
DinnEngine/src/DinnCore/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Component.h  Core.h  EntryPoint.h  GameObject.cpp  GameObject.h  Input.h  Log.cpp  Log.h  Sprite.h  Time.cpp  Time.h  Transform.h  Window.h  glfw_glad.h
DinnEngine/src/DinnCore/ECS/: ComponentArray.h  EntityManager.h
DinnEngine/src/DinnCore/Events/: Event.h  Events.h  KeyCodes.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
DinnEngine/src/DinnCore/Rendering/: RectRenderer.cpp  RectRenderer.h  Renderer2D.cpp  Renderer2D.h  RendererComponents.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TestRenderer.cpp  TestRenderer.h  Texture.cpp  Texture.h
DinnEngine/src/DinnCore/Rendering/Components/: ElementsBufferObject.cpp  ElementsBufferObject.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferObject.cpp  VertexBufferObject.h
DinnEngine/src/DinnCore/Rendering/Shaders/: default.frag  default.vert
DinnEngine/src/Platform/Windows/: WinWindow.cpp  WinWindow.h
DinnEngine/src/Resources/Shaders/: default.vert
DinnEngine/src/Shaders/: default.frag
ExampleGame/: CMakeLists.txt  ExampleGame.vcxproj
ExampleGame/src/: Application.cpp  ExampleGame.cpp
